--- a/.github/workflows/events-demo.yml
+++ b/.github/workflows/events-demo.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout Repository"
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
       - name: "Install Dependency"
         run: echo "Install...."
